examples/test/testpolicy2680.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2680
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key29: value24
      key25: value36
      key9: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value37
          key7: value46
          key31: value0
      podSelector:
        matchLabels:
          key31: value43
          key9: value35
